[package]
name = "weedtime-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sys-info = "0.9.1"

[dependencies.tokio]
features = ["macros", "signal", "rt-multi-thread"]
version = "1.26.0"

[dependencies.bonsaidb]
features = ["local", "local-async"]
version = "0.4.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.154"

[dependencies.dashmap]
features = ["serde"]
version = "5.4.0"

[dependencies.chrono]
default-features = false
features = ["clock"]
version = "0.4.23"

[dependencies.serenity]
features = [
  "cache",
  "framework",
  "standard_framework",
  "rustls_backend",
  "client",
  "gateway",
  "model",
  "collector",
  "builder",
]
version = "0.11.5"
