[package]
name = "weedtime-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serenity = { version = "0.12.4", features = [ "client", "gateway", "rustls_backend", "model" ] }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
chrono = { version = "0.4.41", default-features = false, features = [ "clock" ] }
chrono-tz = { version = "0.10.4" }
whirlwind = { version = "0.1.1" }
weedtime-db = { path = "../weedtime-db" }
