[package]
name = "weedtime-db"
version = "0.1.0"
edition = "2024"

[dependencies]
native_db = "0.8.2"
native_model = "0.4.20"
serenity = { version = "0.12.4", features = [ "client", "gateway", "rustls_backend", "model" ] }
chrono-tz = { version = "0.10.4", features = [ "serde" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
once_cell = "1.21.3"
